<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--头部内容-->
    <RelativeLayout
        android:id="@+id/login_header"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="#008cc9">



        <TextView
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:padding="16dp"
            android:textColor="#fff"
            android:text="@string/register"/>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        >

        <EditText
            android:id="@+id/rg_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/input_your_name"/>
        />
        <EditText
            android:layout_below="@id/rg_username"
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_your_password"/>
        />


    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <Button
            android:id="@+id/bt_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:background="#d4d4d4"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_below="@id/bt_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textColor="#2999ce"
            android:gravity="end"
            android:text="@string/login"
            android:layout_marginTop="16dp"
            android:textSize="16dp"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>

</LinearLayout>